[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pickledb = "0.5.1"
serde = "1.0.192"
lazy_static = "1.4.0"
serde-encrypt = "0.7.0"
base64-url = "2.0.0"
native-tls = "0.2.11"
regex = "1.10.2"

[profile.release]
lto = "thin"
strip = true
